# units-of-measurement

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-test.yml
tests/: test_units.py
tests/resources/: exponents.csv  nerc_mapping.csv  oboe_mapping.csv  om_mapping.csv  qudt_mapping.csv  test_1.ttl  test_1.txt  test_2.ttl  test_2.txt  uo_mapping.csv
units/: cli.py  convert.py  helpers.py
units/resources/: mappings.csv  si_input.csv
units_of_measurement/: cli.py  convert.py  grammar.py  helpers.py
units_of_measurement/resources/: prefixes.csv
